--- a/index.html
+++ b/index.html
@@ -1,18 +1,2 @@
-Hello Amanda, my World!
-.
-.
-.
-.
-..
-.
-.
-.
-..
-.
-.
-.
-..
-.
-.
-.
-.. How you like it now, huh?!
+<h3>Welcome to Luc's barebones webpage!</h3>
+<p>At some point I expect that there will be at least a few things here.</p>
