--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Luc the Doh</title>
+	<!-- linking to main stylesheet below -->
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
         <nav>
