--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="blurb">
 		<h3>Welcome to Luc's barebones webpage!</h3>
 		<p>At some point I expect that there will be at least a few things here.</p>
-<embed src="http://cms.web.cern.ch/sites/cms.web.cern.ch/files/styles/large/public/field/image/Upsilon_candidate.png?itok=dCQ545lH" width="500" height="375" type='application/pdf'>
+<embed src="./img/Upsilon_candidate.png" width="500" height="375" type='application/pdf'>
 		<p>As of now I'm just testing out jmclones basic markup. <em>A Possibility</em> <a href="/about">Read more...</a></p>
                 
             </div><!-- /.blurb -->
