--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="blurb">
 		<h3>Welcome to Luc's barebones webpage!</h3>
 		<p>At some point I expect that there will be at least a few things here.</p>
-<embed src="img/images.duckduckgo.png" width="500" height="375" class="inline">
-		<p>As of now I'm just testing out jmclones basic markup. <em>A Possibility</em> <a href="/about">Read more...</a></p>
+		<embed src="img/Upsilon_candidate.png" width="500" height="375" class="inline">
+		  <p>As of now I'm just testing out jmclones basic markup. <em>A Possibility</em> <a href="/about">Read more...</a></p>
                 
             </div><!-- /.blurb -->
         </div><!-- /.container -->
