--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -18,20 +18,36 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Questions</h1>
-				<h3>Using a TEG generator to convert Excess Heat into Electricity </a></h3>
-        <p> I'm building a rocket mass heater and want to power a light and maybe my computer.
-        a) Do I need a charger converter? 
-        b)What specifications are important for the TEG I get, such as
-        Max Temp, Max Power output etc? </p>
-        <p > a) Converters and inverters do the oppposite of each other, both converting between DC and AC current. 
-        Almost all appliances run off AC and because Peltier Plates output DC so you'll want probably want an inverter,
-        unless you're using a basic lamp that runs off DC. A computer would definitely need AC.
-             b) 
-        </p>
-        <p > An aside: Thermal energy released from wood is about: 1.6 - 5 kWh/kg depending on moisture content (1).
-        </p>
+				<h3> Using a TEG generator to convert Excess Heat into Electricity </a></h3>
+        			<p> I'm building a rocket mass heater and want to power a light and maybe my computer:\n
+				a) Do I need a charger converter? \n
+				b) What specifications should I look out for in the TEG I get: Max Temp, Max Voltage output, etc? </p>
+				<p > a) The output of different TEG's vary widely, so you will definitely need some type of voltage regulator to
+				ensure your final output is at the right voltage. To get an idea, I'd look into other peoples systems, such as 
+				https://www.youtube.com/watch?v=xaT2hqHgLdY. He uses this nifty thing like this to charge a phone (or other 5V usb device)
+			        [1]:\n
+				<embed src="img/VRegulator.jpg" width="200" height="230" class="inline">
+				\n
+				If you want to charge your computer, things get a bit tricker for 2 reasons:\n
+					- You'll need to convert to AC current, since the TEG outputs DC and your computer power supply wants AC.
+					So you'd need an inverter (AC-DC).\n:
+					- You need your TEG system to output a much higher voltage (~20V) and current
+					(~3 A) since most computers require at least that.\n\n
+				b) Max Temp is important to make sure you don't blow out your new TEG plate. I would think this is fairly strict,
+				so if the hot side stays above 300C for long and that was the limit it might be toast. It seems that the way to
+				prevent this is by making sure there is a way to dissipate the heat once it is moved to the cold side (water, the ground, etc)
+			  	and not put it too close to the fire, but have something move the heat to it maybe a copper tube. You also want to make 
+				sure you're using powerful enough TEGs and/or enough of them to actually get the power you would need, so output power is 
+				important too.\n
+					
+				If I were making this cool system, I would probably start small. Get a couple Peltier Plates, a cheap voltage regulator (?)
+				and some type of heatsink.\n 	
+				</p> 
+				<!-- <p > An aside: Thermal energy released from wood is about: 1.6 - 5 kWh/kg depending on moisture content (1).
+				</p>-->
         
-        <p > 1. https://physics.stackexchange.com/questions/194367/how-big-is-a-1kw-fire </p>
+        		<p > 1. http://www.ebay.com/itm/331591953526?rmvSB=true
+			2. https://physics.stackexchange.com/questions/194367/how-big-is-a-1kw-fire  </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
