--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -17,22 +17,23 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Questions</h1>
-				<h3> Using a TEG generator to convert Excess Heat into Electricity </a></h3>
+        		<h1>Using a TEG generator to convert Excess Heat into Electricity</h1>
+				<h3> Question: </h3>
         			<p> I'm building a rocket mass heater and want to power a light and maybe my computer:<br>
 				a) Do I need a charger converter? <br>
 				b) What specifications should I look out for in the TEG I get: Max Temp, Max Voltage output, etc? </p>
+			<h3> Answer: </h3>
 				<p > a) The output of different TEG's vary widely, so you will definitely need some type of voltage regulator to
 				ensure your final output is at the right voltage. To get an idea, I'd look into other peoples systems, such as 
 				https://www.youtube.com/watch?v=xaT2hqHgLdY. He uses this nifty thing like this to charge a phone (or other 5V usb device)
 			        [1]:<br>
-				<embed src="img/VRegulator.jpg" class="inline">
+				<embed src="../img/VRegulator.jpg" width="200" height="220" class="inline">
 				
 				If you want to charge your computer, things get a bit tricker for 2 reasons:<br>
 					- You'll need to convert to AC current, since the TEG outputs DC and your computer power supply wants AC.
-					So you'd need an inverter (AC-DC).<br>:
+					So you'd need an inverter (AC-DC).<br>
 					- You need your TEG system to output a much higher voltage (~20V) and current
-					(~3A) since most computers require at least that.<br>
+					(~3A) since most computers require at least that.<br><br>
 				b) Max Temp is important to make sure you don't blow out your new TEG plate. I would think this is fairly strict,
 				so if the hot side stays above 300C for long and that was the limit it might be toast. It seems that the way to
 				prevent this is by making sure there is a way to dissipate the heat once it is moved to the cold side (water, the ground, etc)
