the format party continues

--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -25,7 +25,8 @@
 			<h3> Answer: </h3>
 				<p > a) The output of different TEG's vary widely, so you will definitely need some type of voltage regulator to
 				ensure your final output is at the right voltage. To get an idea, I'd look into other peoples systems, such as 
-				https://www.youtube.com/watch?v=xaT2hqHgLdY. He uses this nifty thing like this to charge a phone (or other 5V usb device)
+				<a href="https://www.youtube.com/watch?v=xaT2hqHgLdY">DIY Perks'setup</a>.
+				He uses this nifty thing like this to charge a phone (or other 5V usb device)
 			        [1]:<br>
 				<embed src="../img/VRegulator.jpg" width="250" height="280" align="middle" class="inline">
 				<br>
