--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -28,7 +28,7 @@
 				<a href="https://www.youtube.com/watch?v=xaT2hqHgLdY">DIY Perks'setup</a>.
 				He uses this nifty thing like this to charge a phone (or other 5V usb device)
 			        [1]:<br>
-				<embed src="../img/VRegulator.jpg" width="250" height="280" align="middle" class="inline">
+				<embed src="../img/VRegulator.jpg" width="250" height="280" align="middle">
 				<br>
 					
 				If you want to charge your computer, things get a bit tricker for 2 reasons:<br>
