--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -27,13 +27,14 @@
 				ensure your final output is at the right voltage. To get an idea, I'd look into other peoples systems, such as 
 				<a href="https://www.youtube.com/watch?v=xaT2hqHgLdY">DIY Perks' setup</a>.
 				He uses this nifty thing like this to charge a phone (or other 5V USB device)
-			        [1]:<br>
+				[1]:
+				<br>
 					<div style="display:table-cell; vertical-align:middle; text-align:center">
-					<img src="../img/VRegulator.jpg" width="250" height="280"
+					<img src="../img/VRegulator.jpg" width="250" height="280">
 					</div>
 				<!--<embed src="../img/VRegulator.jpg" width="250" height="280" align="middle">-->
 				<br>
-					
+				<!--<p>	-->
 				If you want to charge your computer, things get a bit tricker for 2 reasons:<br>
 					- You'll need to convert to AC current, since the TEG outputs DC and your computer power supply wants AC.
 					So you'd need an inverter (AC-DC).<br>
