--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -30,7 +30,7 @@
 				[1]:</p>
 				<br>
 					<div style="display:table-cell; vertical-align:middle; text-align:center">
-					<img src="../img/VRegulator.jpg" width="250" height="280">
+					<img src="../img/VRegulator.jpg">
 					</div>
 				<!--<embed src="../img/VRegulator.jpg" width="250" height="280" align="middle">-->
 				<br>
