--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -54,8 +54,11 @@
 				<!-- <p > An aside: Thermal energy released from wood is about: 1.6 - 5 kWh/kg depending on moisture content (1).
 				</p>-->
         
-        		<p > 1. http://www.ebay.com/itm/331591953526?rmvSB=true <br>
-			2. https://physics.stackexchange.com/questions/194367/how-big-is-a-1kw-fire  </p>
+        		<p > 1. http://www.ebay.com/itm/331591953526?rmvSB=true <br></p>
+			<!--2. https://physics.stackexchange.com/questions/194367/how-big-is-a-1kw-fire-->  
+			<div style="display:table-cell; vertical-align:middle; text-align:center">
+			<img src="../img/TEG_diagram.jpg">
+			</div>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
