--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -41,12 +41,12 @@
 					- You need your TEG system to output more power, through a much higher voltage (~20V) and current
 					(~3A) since most computers require at least that.<br><br>
 				b) The two specs I would be most concerned with are Max Temp and Max Power.<br> 
-				I would think the max temp is fairly strict, so if the hot side stays above 300C for long and that was the limit it might be
-				toast. It seems that the way to prevent this is by making sure there is a way to dissipate the heat once it is moved to the cold
-				side (water, the ground, etc) and not put it too close to the heat source, maybe have something move the heat to it such as a copper
-				tube. <br>
-				You also want to make sure you're using powerful enough TEGs and/or enough of them to actually get the power you would need, so output
-				power is critical.<br>
+				I would think the max temp is fairly strict, so if the hot side stays above the limit for long, the TEG might be toast. It seems
+				that the way to prevent this is by making sure there is a way to dissipate the heat once it is moved to the coldside (perhaps
+				with a thermal mass like water, the ground, etc) AND not put it too close to the heat source. You could have a copper tube draw the
+				heat towards it, for example. <br>
+				You also want to make sure you're getting enough power by using powerful enough TEGs and/or enough of them to actually get the power
+				you need.<br>
 						
 				</p> 
 				<p> If I were making this cool system, I would probably start small. Get a couple TEG Plates, a cheap voltage regulator (?)
