--- a/anims/index.html
+++ b/anims/index.html
@@ -1,7 +1,8 @@
 <<!DOCTYPE html>
 <html>
 	<head>
-	  #fooObject {
+	  <style type="text/css">
+	    #fooObject {
 	  /* simple box */
 	  position:absolute;
 	  left:0px;
@@ -13,6 +14,7 @@
 	  white-space:nowrap;
 	  padding:0.5em;
 	  }
+	  </style>
 	  <title>Luc the Doh</title>
 	  <!-- link to main stylesheet -->
 	  <link rel="stylesheet" type="text/css" href="/css/main.css">
