--- a/anims/index.html
+++ b/anims/index.html
@@ -41,7 +41,7 @@
 		     function doMove() {
 		     if (parseInt(foo.style.left) >= 500) goR = false;
   		     if (parseInt(foo.style.left) =< 0) goR = true;
-		     if(parseInt(goR === true){
+		     if(parseInt(goR === false){
 			foo.style.left = parseInt(foo.style.left)-1+'px';
   
 			} 
