--- a/anims/index.html
+++ b/anims/index.html
@@ -41,9 +41,8 @@
 		     function doMove() {
 		     if (parseInt(foo.style.left) >= 500) goR = false;
   		     if (parseInt(foo.style.left) =< 0) goR = true;
-		     if(parseInt(goR === false){
-			foo.style.left = parseInt(foo.style.left)-1+'px';
-  
+		     if(parseInt(goR == false){
+			foo.style.left = parseInt(foo.style.left)-1+'px';	
 			} 
 			else {
 				foo.style.left = parseInt(foo.style.left)+1+'px';
