--- a/anims/index.html
+++ b/anims/index.html
@@ -40,21 +40,20 @@
 		     var goR = true;
 		     function doMove() {
 		     if (parseInt(foo.style.left) >= 500) goR = false;
-  		     if (parseInt(foo.style.left) =< 0) goR = true;
-		     if(parseInt(goR == false){
-			foo.style.left = parseInt(foo.style.left)-1+'px';	
+		     if(parseInt(goR == true){
+			foo.style.left = parseInt(foo.style.left)+1+'px';	
 			} 
 			else {
-				foo.style.left = parseInt(foo.style.left)+1+'px';
+				foo.style.left = parseInt(foo.style.left)-1+'px';
 			}
 			setTimeout(doMove,20); // call doMove in 20msec
   
-		  }
+			   }
   
-	function init() {
-	foo =	document.getElementById('fooObject'); // get the "foo" object
-	foo.style.left = '2px'; // set its initial position to 0px
-	doMove(); // start animating
+		function init() {
+			foo =	document.getElementById('fooObject'); // get the "foo" object
+			foo.style.left = '2px'; // set its initial position to 0px
+			doMove(); // start animating
 		}
 		
 		
