back to bounce?

--- a/anims/index.html
+++ b/anims/index.html
@@ -39,7 +39,9 @@
 		     var foo = null;
 		     var goR = true;
 		     function doMove() {
-		
+		        if(foo.style.left > 500){
+				foo.style.left = parseInt(foo.style.left)-2+'px';
+			}
 			foo.style.left = parseInt(foo.style.left)+1+'px';	
 
 			setTimeout(doMove,20); // call doMove in 20msec
