--- a/anims/index.html
+++ b/anims/index.html
@@ -39,8 +39,8 @@
 		     var foo = null;
 		     var goR = true;
 		     function doMove() {
-		        if(partseInt(foo.style.left) > 500){
-				foo.style.left = parseInt(foo.style.left)-2+'px';
+		        if(partseInt(foo.style.left) == (500+'px')){
+				foo.style.left = parseInt(foo.style.left)-200+'px';
 			}
 			foo.style.left = parseInt(foo.style.left)+1+'px';	
 
