--- a/anims/index.html
+++ b/anims/index.html
@@ -41,7 +41,7 @@
 		     var n =0;
 		     var travel=500;
 		     function doMove() {
-		        if((n%(2*1000))>travel){
+		        if((n%(2*travel))>travel){
 				foo.style.left = parseInt(foo.style.left)-2+'px';
 			}
 			foo.style.left = parseInt(foo.style.left)+1+'px';	
