--- a/anims/index.html
+++ b/anims/index.html
@@ -39,7 +39,7 @@
 		     var foo = null;
 		     var goR = true;
 		     var n =0;
-		     var travel=500;
+		     var travel=1000; //width of website
 		     function doMove() {
 		        if((n%(2*travel))>travel){
 				foo.style.left = parseInt(foo.style.left)-2+'px';
@@ -52,7 +52,7 @@
   
 			function init() {
 				foo =	document.getElementById('fooObject'); // get the "foo" object
-				foo.style.left = '2px'; // set its initial position to 0px
+				foo.style.left = '1px'; // set its initial position to 0px
 				doMove(); // start animating
 			}
 		
@@ -61,7 +61,7 @@
 		
 	      </script>
 	      <div id="fooObject">
-		I am foo.
+		I am foo-rect.
 	      </div>
 	      
 	      
