adding banner world pop

--- a/anims/index.html
+++ b/anims/index.html
@@ -63,7 +63,7 @@
 	      <div id="fooObject">
 		I am foo-rect.
 	      </div>
-	      
+	      <iframe height='200' src='http://www.theworldcounts.com/counters/shocking_environmental_facts_and_statistics/world_population_clock_live/embed?background_color=white&color=black&font_family=%22Helvetica+Neue%22%2C+Arial%2C+sans-serif&font_size=14&token=d1f3d99e5b50383d8eea9f552ab48c91de84a829' style='border: none' width='300'></iframe>
 	      
     	    </div><!-- /.blurb -->
 		</div><!-- /.container -->
