adding to links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/cv">CV</a></li>
 		<li><a href="/Learnings">Learnings</a></li>
+		<li><a href="/anims">Learnings</a></li>
                 <li><a href="/blog">Blog</a></li>
             </ul>
         </nav>
@@ -26,7 +27,7 @@
         </div><!-- /.container -->
         <footer>
             <ul>
-                <li><a href="mailto:nobody@gmail.com">email</a></li>
+                <li><a href="mailto:ljdhauh@umd.edu">email</a></li>
               <li><a href="https://github.com/lucdoh">github.com/lucdoh</a></li>
             </ul>
         </footer>
