--- a/anims/index.html
+++ b/anims/index.html
@@ -63,15 +63,8 @@
 	      <div id="fooObject">
 		I am foo-rect.
 	      </div>
-	      <iframe height='200' src='http://www.theworldcounts.com/counters/shocking_environmental_facts_and_statistics/world_population_clock_live/embed?background_color=white&color=black&font_family=%22Helvetica+Neue%22%2C+Arial%2C+sans-serif&font_size=14&token=d1f3d99e5b50383d8eea9f552ab48c91de84a829' style='border: none' width='300'></iframe>
-	      
-    	    </div><!-- /.blurb -->
-		</div><!-- /.container -->
-	  <footer>
-    	    <ul>
-              <li><a href="mailto:nobody@gmail.com">email</a></li>
-              <li><a href="https://github.com/lucdoh">github.com/lucdoh</a></li>
-	    </ul>
-	  </footer>
-	</body>
-</html>
+		<br>
+		<br>
+	      <iframe src="https://www.census.gov/popclock/embed.php?component=counter&popclk=745575" width="389" height="798" frameBorder="0" allowtransparency="true"></iframe>
+		<br>	 
+			 
