spacing for counter

--- a/anims/index.html
+++ b/anims/index.html
@@ -61,8 +61,12 @@
 		
 	      </script>
 	      <div id="fooObject">
-		I am foo-rect.
+		I float.
 	      </div>
+		<br>
+		<br>
+		<br>
+		<br>
 		<br>
 		<br>
 	      <iframe src="https://www.census.gov/popclock/embed.php?component=counter&popclk=745575" width="389" height="798" frameBorder="0" allowtransparency="true"></iframe>
