--- a/anims/index.html
+++ b/anims/index.html
@@ -25,8 +25,8 @@
 		   <li><a href="/">Home</a></li>
 		   <li><a href="/about">About</a></li>
 		   <li><a href="/cv">CV</a></li>
-		   <li><a href="/cv">Learnings</a></li>
-		   <li><a href="/blog">Blog</a></li>
+		   <li><a href="/Learnings">Learnings</a></li>
+		   <li><a href="/anims">Animations/Counters</a></li>
     		 </ul>
 	       </nav>
 	       <div class="container">
