--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/cv">CV</a></li>
 		<li><a href="/Learnings">Learnings</a></li>
-		<li><a href="/anims">Learnings</a></li>
-                <li><a href="/blog">Blog</a></li>
+		<li><a href="/anims">Animations/Counters</a></li>
+
+                <!-- <li><a href="/blog">Blog</a></li> -->
             </ul>
         </nav>
         <div class="container">
