--- a/cv/index.html
+++ b/cv/index.html
@@ -11,7 +11,9 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+			<li><a href="/Learnings">Learnings</a></li>
+        		<li><a href="/anims">Animations/Counters</a></li>
+
     		</ul>
 		</nav>
 		<div class="container">
