--- a/cv/index.html
+++ b/cv/index.html
@@ -4,6 +4,14 @@
 		<title>Luc the Doh</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<!-- Testing expandible -->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		
+		
+		
 	</head>
 	<body>
 		<nav>
@@ -18,6 +26,12 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
+		<div data-role="main" class="ui-content">
+    			<div data-role="collapsible">
+      			<h1>Click me - I'm collapsible!</h1>
+     			<p>I'm the expanded content.</p>
+    			</div>
+ 		</div>
         		<h1>I need to put my CV here.</h1>
 				<p>These are my accomplishments in my 2 dozen years here.</a></p>
     		</div><!-- /.blurb -->
