--- a/cv/index.html
+++ b/cv/index.html
@@ -30,6 +30,10 @@
     			<div data-role="collapsible">
       			<h1>Click me - I'm collapsible!</h1>
      			<p>I'm the expanded content.</p>
+			 <p>I'm the 2nd expanded content.</p>
+			 <p>I'm the 3rd expanded content.</p>
+
+
     			</div>
  		</div>
         		<h1>I need to put my CV here.</h1>
