--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -4,6 +4,12 @@
 		<title>Luc the Doh</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<!-- Testing expandable -->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		<!-- End expandable-->
 	</head>
 	<body>
 		<nav>
@@ -17,6 +23,10 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
+			<!--Start collapse div, h1-h6 will be expandable -->
+		<div data-role="main" class="ui-content">
+    			<div data-role="collapsible">
+				
         		<h1>Using a TEG generator to convert Excess Heat into Electricity</h1>
 				<h3> Question: </h3>
         			<p> I'm building a rocket mass heater and want to power a light and maybe my computer:<br>
@@ -57,7 +67,8 @@
         		<p > 1. http://www.ebay.com/itm/331591953526?rmvSB=true <br></p>
 			<!--2. https://physics.stackexchange.com/questions/194367/how-big-is-a-1kw-fire-->  
 			<embed src="../img/TEG_diagram.jpg" width="200" height="260">
-			
+			</div><!-- close collapsible-->
+			</div><!-- close class ui-content-->
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
