adding 2nd topic

--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -23,10 +23,10 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-			<!--Start collapse div, h1-h6 will be expandable -->
+		<!--Start collapse div, h1-h6 will be expandable -->
 		<div data-role="main" class="ui-content">
+			
     			<div data-role="collapsible">
-				
         		<h1>Using a TEG generator to convert Excess Heat into Electricity</h1>
 				<h3> Question: </h3>
         			<p> I'm building a rocket mass heater and want to power a light and maybe my computer:<br>
@@ -68,6 +68,9 @@
 			<!--2. https://physics.stackexchange.com/questions/194367/how-big-is-a-1kw-fire-->  
 			<embed src="../img/TEG_diagram.jpg" width="200" height="260">
 			</div><!-- close collapsible-->
+			<div data-role="collapsible">
+				<h1>What the hell is Power, Current and Voltage?</h1>
+			</div><!-- close 2nd collapsible-->
 			</div><!-- close class ui-content-->
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
