--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -70,6 +70,7 @@
 			</div><!-- close collapsible-->
 			<div data-role="collapsible">
 				<h1>What the hell is Power, Current and Voltage?</h1>
+				<p> This needs to be worked on... </p>
 			</div><!-- close 2nd collapsible-->
 			</div><!-- close class ui-content-->
     		</div><!-- /.blurb -->
