--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -75,6 +75,13 @@
 			</div><!-- close class ui-content-->
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		<!--
+ 			<!-- begin wwww.htmlcommentbox.com -->
+  			<div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
+  			<link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ 			<script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24aPrLdGNzLzPj6mk.V9nl30"+"&opts=16862&num=10&ts=1506665294891");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+ 			<!-- end www.htmlcommentbox.com -->
++			-->
 		<footer>
     		<ul>
         		<li><a href="mailto:nobody@gmail.com">email</a></li>
