with cv in index.html

--- a/cv/index.html
+++ b/cv/index.html
@@ -26,6 +26,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
+			<!--
 		<div data-role="main" class="ui-content">
     			<div data-role="collapsible">
       			<h1>Click me - I'm collapsible!</h1>
@@ -36,8 +37,13 @@
 
     			</div>
  		</div>
-        		<h1>I need to put my CV here.</h1>
-				<p>These are my accomplishments in my 2 dozen years here.</a></p>
+		-->
+		<embed src="../files/Luc_CV_Late2017.pdf" width="800px" height="2100px" />
+
+		<!--
+		<h1>I need to put my CV here.</h1>
+		<p>These are my accomplishments in my 2 dozen years here.</a></p>
+		-->
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
