--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 	<!-- linking to main stylesheet below -->
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
+
     <body>
+	<div id="wrap">
+		    <!-- WEBSITE GOES HERE -->
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -32,5 +35,6 @@
               <li><a href="https://github.com/lucdoh">github.com/lucdoh</a></li>
             </ul>
         </footer>
+	</div>
     </body>
 </html>
