Adding embedded primer on solar energy

--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -69,9 +69,13 @@
 			<embed src="../img/TEG_diagram.jpg" width="200" height="260">
 			</div><!-- close collapsible-->
 			<div data-role="collapsible">
-				<h1>What the hell is Power, Current and Voltage?</h1>
-				<p> This needs to be worked on... </p>
+				<h1>A Primer on Solar Energy</h1>
+				iframe src="https://docs.google.com/document/d/e/2PACX-1vRIIXaDC9-tqdEuE7w8tXYnzHcARSoP8VTcc6IwZYzBaofDjxGDYRwx3eWufFtNLKRoTsh7xXlu8SXV/pub?embedded=true"></iframe>
 			</div><!-- close 2nd collapsible-->
+			<div data-role="collapsible">
+				<h1>TBD</h1>
+				<p> This needs to be worked on... </p>
+			</div><!-- close 3rd collapsible-->
 			</div><!-- close class ui-content-->
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
