--- a/Learnings/index.html
+++ b/Learnings/index.html
@@ -70,7 +70,7 @@
 			</div><!-- close collapsible-->
 			<div data-role="collapsible">
 				<h1>A Primer on Solar Energy</h1>
-				iframe src="https://docs.google.com/document/d/e/2PACX-1vRIIXaDC9-tqdEuE7w8tXYnzHcARSoP8VTcc6IwZYzBaofDjxGDYRwx3eWufFtNLKRoTsh7xXlu8SXV/pub?embedded=true"></iframe>
+				<iframe src="https://docs.google.com/document/d/e/2PACX-1vRIIXaDC9-tqdEuE7w8tXYnzHcARSoP8VTcc6IwZYzBaofDjxGDYRwx3eWufFtNLKRoTsh7xXlu8SXV/pub?embedded=true"></iframe>
 			</div><!-- close 2nd collapsible-->
 			<div data-role="collapsible">
 				<h1>TBD</h1>
