added wrap to cv

--- a/cv/index.html
+++ b/cv/index.html
@@ -14,6 +14,8 @@
 		
 	</head>
 	<body>
+		<div id="wrap">
+                    <!-- WEBSITE GOES HERE -->
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
@@ -40,5 +42,6 @@
         		<li><a href="https://github.com/lucdoh">github.com/lucdoh</a></li>
 			</ul>
 		</footer>
+		</div>	
 	</body>
 </html>
