--- a/anims/index.html
+++ b/anims/index.html
@@ -65,8 +65,7 @@
 	      </div>
 		<br>
 		<br>
-		<br>
-		<br>
+		<iframe src="https://ourworldindata.org/grapher/primary-energy-consumption-by-source-and-region?stackMode=absolute" style="width: 100%; height: 600px; border: 0px none;"></iframe>
 		<br>
 		<br>
 	      <iframe src="https://www.census.gov/popclock/embed.php?component=counter&popclk=745575" width="460" height="550" frameBorder="0" allowtransparency="true"></iframe>
