--- a/anims/index.html
+++ b/anims/index.html
@@ -64,10 +64,14 @@
 		I float.
 	      </div>
 		<br>
+		<!--world-->
+		<a href="http://worldpopulationclock.info/world" class="link_counter">World population</a><div id="preview" data-country="world" data-state=""data-county="" data-city="" data-size="1" data-style="0"data-tcolor="" data-bcolor="" data-background=""data-transparent="1"></div><script src="http://worldpopulationclock.info/api_clock.js"></script>
+		<!-- Energy consumption by source-->
+	   <iframe src="https://ourworldindata.org/grapher/primary-energy-consumption-by-source-and-region?stackMode=absolute" style="width: 100%; height: 600px; border: 0px none;"></iframe>
 		<br>
-		<iframe src="https://ourworldindata.org/grapher/primary-energy-consumption-by-source-and-region?stackMode=absolute" style="width: 100%; height: 600px; border: 0px none;"></iframe>
 		<br>
-		<br>
+		<!--
 	      <iframe src="https://www.census.gov/popclock/embed.php?component=counter&popclk=745575" width="460" height="550" frameBorder="0" allowtransparency="true"></iframe>
+		-->
 		<br>	 
 			 
