Formatting + CO2 count

--- a/anims/index.html
+++ b/anims/index.html
@@ -65,12 +65,14 @@
 	      </div>
 		<br>
 		<br>
-		<!-- Energy consumption by source-->
-	   	<iframe src="https://ourworldindata.org/grapher/primary-energy-consumption-by-source-and-region?stackMode=absolute" style="width: 100%; height: 600px; border: 0px none;"></iframe>
-		<br>
-		<br>
 		<!-- Pop -->
-	      <iframe src="https://www.census.gov/popclock/embed.php?component=counter&popclk=745575" width="460" height="550" frameBorder="0" allowtransparency="true" align ="right"></iframe>
-		
+	      <iframe src="https://www.census.gov/popclock/embed.php?component=counter&popclk=745575" width="43%" height="550" frameBorder="0" allowtransparency="true" align ="right"></iframe>      
+	<iframe src="https://ourworldindata.org/grapher/primary-energy-consumption-by-source-and-region?stackMode=absolute" style="width: 57%; height: 600px; border: 0px none;"></iframe>
+		<br>
+		<br>
+		<!--Start SHOW CO2 WIDGET by Pro Oxygen v15d-->
+		<a href="https://www.co2.earth/">
+		<img style="max-width:100%" title="Earth's latest data for atmospheric CO2" alt="Atmospheric CO2" src="https://assets.show.earth/widget-co2/kc-monthly-0525.png" /></a>
+		<!--End CO2 Widget-->
 		<br>	 
 			 
