--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
         </nav>
         <div class="container">
             <div class="blurb">
-		<h3>Welcome to Luc's barebones webpage!</h3>
-		<p>At some point I expect that there will be at least a few things here.</p>
+		<h3>Welcome to Luc's webpage!</h3>
+		<p>A few things exist here, hopefully I'll have time to add more soon. As of now, I have 1 or 2 articles in 
+		<li><a href="/Learnings">Learnings</a></li> related to energy. One of these is an unfinished primer on Solar Energy. I'm 
+		happy to research and write about topics I might so leave me a comment there if you have any requests. I am compiling
+		some interesting plots/visualizations about population, CO2 emissions and energy in  <li><a href="/anims">Animations/Counters</a></li>. </p>
 		<embed src="img/Upsilon_candidate.png" width="500" height="375" class="inline">
-		  <p>As of now I'm just testing out jmclones basic markup. <em>A Possibility</em> <a href="/about">Read more...</a></p>
+		<!-- <p>As of now I'm just testing out jmclones basic markup. <em>A Possibility</em> <a href="/about">Read more...</a></p> -->
                 
             </div><!-- /.blurb -->
         </div><!-- /.container -->
         <footer>
             <ul>
-                <li><a href="mailto:ljdhauh@umd.edu">email</a></li>
+                <li><a href="mailto:ljdhauth@umd.edu">email</a></li>
               <li><a href="https://github.com/lucdoh">github.com/lucdoh</a></li>
             </ul>
         </footer>
