--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="/cv">CV</a></li>
 		<li><a href="/Learnings">Learnings</a></li>
 		<li><a href="/anims">Animations/Counters</a></li>
+		<li><a href="/DataScienceTutorial">DS-Tutorial</a></li>
 
                 <!-- <li><a href="/blog">Blog</a></li> -->
             </ul>
