--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Luc the Doh</title>
+        <title>Luc Doh</title>
 	<!-- linking to main stylesheet below -->
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/cv">CV</a></li>
-		<li><a href="/Learnings">Learnings</a></li>
+                <!-- <li><a href="/about">About</a></li>
+		 <li><a href="/Learnings">Learnings</a></li> -->
+         <li><a href="/cv"> Old CV</a></li>
 		<li><a href="/anims">Animations/Counters</a></li>
 		<li><a href="/DataScienceTutorial">DS-Tutorial</a></li>
 
@@ -23,19 +23,20 @@
         </nav>
         <div class="container">
             <div class="blurb">
-		<h3>Welcome to Luc's webpage!</h3>
-		<p>A few things exist here, hopefully I'll have time to add more soon. As of now, I have 1 or 2 articles in 
-		<a href="/Learnings">Learnings</a> related to energy. One of these is an unfinished primer on Solar Energy. I'm 
+		<h3>Welcome to my webpage!</h3>
+		<p>Some things exist here, much of it is dated. Hopefully I'll have time to add more soon.  </p>
+            <!--
+        <a href="/Learnings">Learnings</a> related to energy. One of these is an unfinished primer on Solar Energy. I'm
 		happy to research and write about topics I might so leave me a comment there if you have any requests. I am compiling
-		some interesting plots/visualizations about population, CO2 emissions and energy in  <a href="/anims">Animations/Counters</a>. </p>
-		<embed src="img/Upsilon_candidate.png" width="500" height="375" class="inline">
+		some interesting plots/visualizations about population, CO2 emissions and energy in  <a href="/anims">Animations/Counters</a>. </p> -->
+		<embed src="img/Upsilon_candidate.png" width="420" height="300" class="inline">
 		<!-- <p>As of now I'm just testing out jmclones basic markup. <em>A Possibility</em> <a href="/about">Read more...</a></p> -->
-                
+
             </div><!-- /.blurb -->
         </div><!-- /.container -->
         <footer>
             <ul>
-                <li><a href="mailto:ljdhauth@umd.edu">email</a></li>
+                <li><a href="mailto:ljdhauth@terpmail.umd.edu">email</a></li>
               <li><a href="https://github.com/lucdoh">github.com/lucdoh</a></li>
             </ul>
         </footer>
