--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Luc Doh</title>
 	<!-- linking to main stylesheet below -->
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-dark-grey.css">
     </head>
 
     <body>
