--- a/cv/index.html
+++ b/cv/index.html
@@ -1,47 +1,58 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Luc the Doh</title>
+		<title> CV </title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		<!-- Testing expandible -->
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	 	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-dark-grey.css">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-		
-		
-		
-	</head>
-	<body>
-		<div id="wrap">
-                    <!-- WEBSITE GOES HERE -->
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-			<li><a href="/Learnings">Learnings</a></li>
-        		<li><a href="/anims">Animations/Counters</a></li>
 
-    		</ul>
+	  </head>
+	  <body>
+		  <div id='wrap'>
+	  <ul class="w3-ul w3-border-top">
+	 <center>
+		<nav>
+			<li class="w3-theme-d3">
+				<a href="/">Home</a>
+	            &nbsp
+	            <a href="/DataScienceTutorial">DS-Tutorial</a>
+	            &nbsp
+	           <a href="/cv"> Old CV</a>
+	           &nbsp
+	           <a href="/anims">Animations/Counters</a>
+	           &nbsp
+			   <a href="/research">Research</a>
+			   &nbsp
+	   </li>
 		</nav>
 		<div class="container">
-    		<div class="blurb">
+    	<div class="blurb">
+		<!-- Testing expandible -->
 		<embed src="../files/Luc_CV_Late2017.pdf" width="800px" height="2100px" />
 
 		<!--
-		<h1>I need to put my CV here.</h1>
 		<p>These are my accomplishments in my 2 dozen years here.</a></p>
 		-->
-    		</div><!-- /.blurb -->
+		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li><a href="mailto:nobody@gmail.com">email</a></li>
-        		<li><a href="https://github.com/lucdoh">github.com/lucdoh</a></li>
-			</ul>
-		</footer>
-		</div>	
-	</body>
+			<li class="w3-theme-l3">
+				<figure>
+				<img style="display: inline; margin: 0 11px;" title="snailmail_logo" src="../img/Clipart_mail.png" alt ="" width="55.207" height="50" />
+				<img style="display: inline; margin: 0 18px;" title="github_logo" src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt ="" width="50" height="50" />
+				<figcaption>
+					<a href="mailto:ljdhauth@terpmail.umd.edu">Email</a>  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <a href="https://github.com/lucdoh">Github</a>
+				</figcaption>
+			</figure>
+			  </li>
+			  </footer>
+		</div>
+</center>
+</body>
 </html>
