--- a/index.html
+++ b/index.html
@@ -1,47 +1,76 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Luc Doh</title>
+        <title>Luc's Static Page</title>
+
 	<!-- linking to main stylesheet below -->
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-dark-grey.css">
+    <style>
+    figure {
+      margin-top: 0.2em;
+      margin-bottom: 0em;
+    }
+    </style>
+
     </head>
-
+     <ul class="w3-ul w3-border-top">
     <body>
+    <center>
 	<div id="wrap">
-		    <!-- WEBSITE GOES HERE -->
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <!-- <li><a href="/about">About</a></li>
-		 <li><a href="/Learnings">Learnings</a></li> -->
-         <li><a href="/cv"> Old CV</a></li>
-		<li><a href="/anims">Animations/Counters</a></li>
-		<li><a href="/DataScienceTutorial">DS-Tutorial</a></li>
 
+        <nav>
+         <li class="w3-theme-d3">
+        <!-- <a href="/about">About</a>
+            <a href="/Learnings">Learnings</a>-->
+         <a href="/">Home</a>
+         &nbsp
+         <a href="/DataScienceTutorial">DS-Tutorial</a>
+         &nbsp
+        <a href="/cv"> Old CV</a>
+        &nbsp
+        <a href="/anims">Animations/Counters</a>
+        &nbsp
+        <a href="/research">Research</a>
+        &nbsp
                 <!-- <li><a href="/blog">Blog</a></li> -->
-            </ul>
+            </li>
         </nav>
         <div class="container">
-            <div class="blurb">
+
 		<h3>Welcome to my webpage!</h3>
-		<p>Some things exist here, much of it is dated. Hopefully I'll have time to add more soon.  </p>
+		<p>Some things exist here, but much of it is dated.<br> Hopefully I'll have time to add more soon.  </p>
             <!--
         <a href="/Learnings">Learnings</a> related to energy. One of these is an unfinished primer on Solar Energy. I'm
 		happy to research and write about topics I might so leave me a comment there if you have any requests. I am compiling
 		some interesting plots/visualizations about population, CO2 emissions and energy in  <a href="/anims">Animations/Counters</a>. </p> -->
-		<embed src="img/Upsilon_candidate.png" width="420" height="300" class="inline">
+		<embed src="img/Upsilon_candidate.png" width="375" height="250" class="inline">
 		<!-- <p>As of now I'm just testing out jmclones basic markup. <em>A Possibility</em> <a href="/about">Read more...</a></p> -->
 
-            </div><!-- /.blurb -->
         </div><!-- /.container -->
+
         <footer>
-            <ul>
-                <li><a href="mailto:ljdhauth@terpmail.umd.edu">email</a></li>
-              <li><a href="https://github.com/lucdoh">github.com/lucdoh</a></li>
-            </ul>
-        </footer>
+            <li class="w3-theme-l3">
+                <figure>
+                <img style="display: inline; margin: 0 11px;" title="snailmail_logo" src="img/Clipart_mail.png" alt ="" width="55.207" height="50" />
+                <img style="display: inline; margin: 0 18px;" title="github_logo" src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt ="" width="50" height="50" />
+                <figcaption>
+                    <a href="mailto:ljdhauth@terpmail.umd.edu">Email</a>  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <a href="https://github.com/lucdoh">Github</a>
+                </figcaption>
+            </figure>
+              </li>
+              </footer>
+            <!--
+                <img style="display: inline; margin: 0 7px;" title="snailmail_logo" src="img/Clipart_mail.png" alt ="" width="55.207" height="50" />
+                <a href="mailto:ljdhauth@terpmail.umd.edu">Email</a>
+                &nbsp&nbsp&nbsp
+                <img style="display: inline; margin: 0 7px;" title="github_logo" src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt ="" width="50" height="50" />
+                <a href="https://github.com/lucdoh">Github</a>
+            -->
+
+        </center>
 	</div>
     </body>
+    </ul>
 </html>
