Viewport so that page fills width

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Luc's Static Page</title>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 	<!-- linking to main stylesheet below -->
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -53,8 +53,8 @@
         <footer>
             <li class="w3-theme-l3">
                 <figure>
-                <img style="display: inline; margin: 0 11px;" title="snailmail_logo" src="img/Clipart_mail.png" alt ="" width="55.207" height="50" />
-                <img style="display: inline; margin: 0 18px;" title="github_logo" src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt ="" width="50" height="50" />
+                <img style="display: inline; margin: 0 5px;" title="snailmail_logo" src="img/Clipart_mail.png" alt ="" width="55.207" height="50" />
+                <img style="display: inline; margin: 0 5px;" title="github_logo" src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt ="" width="50" height="50" />
                 <figcaption>
                     <a href="mailto:ljdhauth@terpmail.umd.edu">Email</a>  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <a href="https://github.com/lucdoh">Github</a>
                 </figcaption>
