--- a/anims/index.html
+++ b/anims/index.html
@@ -20,6 +20,7 @@
 		 }
 	       </style>
 	       <title>Luc's Static Page</title>
+		   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 		   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	   	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-dark-grey.css">
 
