--- a/cv/index.html
+++ b/cv/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title> CV </title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	 	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-dark-grey.css">
 
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
